[gd_scene load_steps=15 format=3 uid="uid://dxk1gwxttexmc"]

[ext_resource type="Texture2D" uid="uid://cy4xfx762bxgb" path="res://assets/sprites/BG.png" id="1_2fwkt"]
[ext_resource type="Script" uid="uid://dt2e0sg4k2xbp" path="res://Scenes/Arena/Arena.gd" id="1_ek0gv"]
[ext_resource type="Texture2D" uid="uid://ov4fmsbglo55" path="res://assets/sprites/Map.png" id="2_fl7xt"]
[ext_resource type="Script" uid="uid://b52th3pdy0e53" path="res://Scenes/Arena/Camera2d.gd" id="4_fl7xt"]
[ext_resource type="Script" uid="uid://defktoxxloguj" path="res://Scenes/Arena/Spawner.gd" id="7_csujq"]
[ext_resource type="Script" uid="uid://qxdbuvfkmhq0" path="res://Resources/Waves/WaveData.gd" id="8_bga1v"]
[ext_resource type="PackedScene" uid="uid://bi665exmuiwa7" path="res://Scenes/UI/CoinsBag/CoinsBag.tscn" id="9_8qqbc"]
[ext_resource type="PackedScene" uid="uid://doqu86g2w76di" path="res://Scenes/UI/UpgradePanel/UpgradePanel.tscn" id="9_bga1v"]
[ext_resource type="Resource" uid="uid://dmghrwknfxqn8" path="res://Resources/Waves/Data/Wave1to5.tres" id="9_ramf0"]
[ext_resource type="PackedScene" uid="uid://dbb6sf2pk3rob" path="res://Scenes/UI/ShopCard/ShopPanel/ShopPanel.tscn" id="10_ramf0"]
[ext_resource type="AudioStream" uid="uid://prc8bub0x4s1" path="res://assets/audio/Bg Music.mp3" id="12_4r4ii"]
[ext_resource type="PackedScene" uid="uid://bsymtrcywof8h" path="res://Scenes/UI/SelectionPanel/SelectionPanel.tscn" id="12_vjiyp"]

[sub_resource type="LabelSettings" id="LabelSettings_bga1v"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_ramf0"]
font_size = 64

[node name="Arena" type="Node2D"]
script = ExtResource("1_ek0gv")
normal_color = Color(0.973535, 0.973535, 0.973535, 1)
blocked_color = Color(0.7413, 0.145918, 0.376383, 1)
critical_color = Color(0.898174, 0.705722, 3.85046e-07, 1)
hp_color = Color(0.163141, 0.545799, 0, 1)

[node name="BlackBG" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_2fwkt")

[node name="GrassBG" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_fl7xt")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("4_fl7xt")

[node name="Spawner" type="Node2D" parent="."]
script = ExtResource("7_csujq")
waves_data = Array[ExtResource("8_bga1v")]([ExtResource("9_ramf0")])

[node name="SpawnTimer" type="Timer" parent="Spawner"]
one_shot = true

[node name="WaveTimer" type="Timer" parent="Spawner"]
one_shot = true

[node name="GameUI" type="CanvasLayer" parent="."]

[node name="CoinsBag" parent="GameUI" instance=ExtResource("9_8qqbc")]
unique_name_in_owner = true

[node name="WaveIndexLabel" type="Label" parent="GameUI"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -110.0
offset_top = 20.0
offset_right = 110.0
offset_bottom = 97.3333
grow_horizontal = 2
text = "Wave 1"
label_settings = SubResource("LabelSettings_bga1v")

[node name="WaveTimeLabel" type="Label" parent="GameUI"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -110.0
offset_top = 100.0
offset_right = 110.0
offset_bottom = 177.333
grow_horizontal = 2
text = "10"
label_settings = SubResource("LabelSettings_ramf0")
horizontal_alignment = 1

[node name="UpgradePanel" parent="GameUI" instance=ExtResource("9_bga1v")]
unique_name_in_owner = true
visible = false

[node name="ShopPanel" parent="GameUI" instance=ExtResource("10_ramf0")]
unique_name_in_owner = true
visible = false

[node name="SelectionPanel" parent="GameUI" instance=ExtResource("12_vjiyp")]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_4r4ii")
volume_db = -35.0
autoplay = true
bus = &"Music"

[connection signal="on_wave_completed" from="Spawner" to="." method="_on_spawner_on_wave_completed"]
[connection signal="timeout" from="Spawner/SpawnTimer" to="Spawner" method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="Spawner/WaveTimer" to="Spawner" method="_on_wave_timer_timeout"]
[connection signal="on_shop_next_wave" from="GameUI/ShopPanel" to="." method="_on_shop_panel_on_shop_next_wave"]
[connection signal="on_selection_completed" from="GameUI/SelectionPanel" to="." method="_on_selection_panel_on_selection_completed"]
